# grpc_pubsub

./: Cargo.toml  README.md  build.rs  publish_client.rs
src/: publish_client.rs  server.rs  subscribe_client.rs
src/proto/: pubsub.proto
