[package]
name = "pubsub"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the pubsub gRPC server
name = "pubsub-server-test"
path = "src/server_test.rs"

[[bin]] # Bin to run the pubsub gRPC server
name = "pubsub-server"
path = "src/server.rs"

[[bin]] # Bin to run the pubsub gRPC publish client
name = "pubsub-publish-client"
path = "src/publish_client.rs"

[[bin]] # Bin to run the pubsub gRPC subscribe client
name = "pubsub-subscribe-client"
path = "src/subscribe_client.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
futures = "0.3.28"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.9"

[build-dependencies]
tonic-build = "0.9"
